# autoLogger-XcodeClangPlugin

clang-autostats_qzd/: CMakeLists.txt  ClangAutoStats.cpp  clangplugin_commond.txt
